Bug 424959 - Palette docker breaks imported Photoshop .act palette upon re-launch
Summary: Palette docker breaks imported Photoshop .act palette upon re-launch
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Dockers (other bugs)
Version First Reported In: 4.3.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: wolthera
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-08-03 11:50 UTC by Tyson Tan
Modified: 2020-08-15 11:37 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Sample Photoshop palette file (772 bytes, application/octet-stream)
2020-08-03 11:50 UTC, Tyson Tan
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tyson Tan 2020-08-03 11:50:25 UTC
Created attachment 130605 [details]
Sample Photoshop palette file

There are a series of Palette Docker related bugs I’ve discovered when doing community support:

Krita won’t save imported Photoshop .act palette. It will drop any imported .act palette upon re-launch.

Krita will break an imported Photoshop .act palette upon re-launch if it was embedded in a .kra file. The said palette is kept, but completely glitched out.

When importing a palette, Krita will ask “Do you want to store this palette in your current image?”, if you choose “No”, Krita won’t import the palette, but loads “Swtch CMYK” palette.

When importing a palette, Krita will ask “Do you want to store this palette in your current image?”, no matter which you choose, Krita will always set the value as “Document” in Palette docker’s “Folder” icon (Edit this Palette) dialogue.

Workaround for importing Photoshop .act palette in Krita:

Import a .act palette
Store in current image - Yes
Export the imported palette as .kpl
Load the .kpl palette
Re-launch and it’s still there.
Comment 1 wolthera 2020-08-03 11:52:28 UTC
Thanks for doing this!

Part of this is caused by me being too busy with my bachelor's thesis when the palette gsoc project went in, because this is indeed terrible ux, half of the problem is also that I am not sure krita knows how to load act files from a kra, they should've been converted to kpl beforehand :|

Will take it. Don't know when I'll get to it.
Comment 2 Tyson Tan 2020-08-03 12:04:16 UTC
No problem! I have become more acquainted with FOSS community operation these days. I can understand. I wish one day I can help with some actual codes.

Please take your time. We have an easy workaround for this bug anyway. I will make sure this one is answered in our expanded local community FAQ.
Comment 3 wolthera 2020-08-15 09:14:00 UTC
Git commit d76561ce8b4aefc906995a3c5f53265df387fe71 by Wolthera van Hövell tot Westerflier.
Committed on 15/08/2020 at 09:11.
Pushed by woltherav into branch 'krita/4.3'.

Remove global/document import question for palettes.

It was terrible UX and it didn't work, meaning non-kpl palettes
would be impossible to import and break documents.

We still need to figure out a way to convert non-kpl to kpl palettes,
but that might be master only.

M  +3    -8    libs/ui/KisPaletteEditor.cpp

https://invent.kde.org/graphics/krita/commit/d76561ce8b4aefc906995a3c5f53265df387fe71
Comment 4 wolthera 2020-08-15 10:28:09 UTC
Git commit cc04d8f048d196ca950d5c1f7372111497ab85dd by Wolthera van Hövell tot Westerflier.
Committed on 15/08/2020 at 10:26.
Pushed by woltherav into branch 'master'.

Ensure saved palettes are KPL.

We get errors with .act and other palette files. There's still weirdness
with filesnames here. Not sure if backportable.

M  +4    -0    plugins/impex/libkra/kis_kra_saver.cpp

https://invent.kde.org/graphics/krita/commit/cc04d8f048d196ca950d5c1f7372111497ab85dd
Comment 5 Tyson Tan 2020-08-15 11:37:42 UTC
Thank you Wolthera! :D