Ensure saved palettes are KPL.

We get errors with .act and other palette files. There's still weirdness
with filesnames here. Not sure if backportable.

BUG:424959